# krusader

./: .arcconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .reviewboardrc  AUTHORS  CMakeLists.txt  CPackConfig.cmake  CREDITS  CVSNEWS  ChangeLog  FAQ  INSTALL  Krusader.kdevelop  Mainpage.dox  Makefile.am  Makefile.in  Messages.sh  NEWS  README  README.md  SVNNEWS  TODO  Why no issues tab?  acinclude.m4  aclocal.m4  backup  configure  configure.in  configure.in.in  createdist.sh  dist2rpm  extractrc  full_backup  krusader-1.40.info  krusader-1.50.info  krusader-1.60.info  krusader-1.70.info  (+12 more)
app/: CMakeLists.txt  abstractpanelmanager.h  actionsbase.cpp  actionsbase.h  compat.h  defaults.h  filelisticon.cpp  filelisticon.h  icon.cpp  icon.h  kractions.cpp  kractions.h  krdebuglogger.cpp  krdebuglogger.h  krglobal.cpp  krglobal.h  krmainwindow.h  krservices.cpp  krservices.h  krslots.cpp  krslots.h  krusader.cpp  krusader.h  krusaderlisterui.rc  krusaderui.rc  krusaderview.cpp  krusaderview.h  krviewer.rc  layout.xml  main.cpp  midnight_commander.color  org.kde.krusader.appdata.xml  org.kde.krusader.desktop  panelmanager.cpp  panelmanager.h  paneltabbar.cpp  paneltabbar.h  resources.qrc  tabactions.cpp  tabactions.h  (+1 more)
app/ActionMan/: CMakeLists.txt  actionman.cpp  actionman.h  actionproperty.cpp  actionproperty.h  actionproperty.ui  addplaceholderpopup.cpp  addplaceholderpopup.h  useractionlistview.cpp  useractionlistview.h  useractionpage.cpp  useractionpage.h
app/Archive/: CMakeLists.txt  abstractthreadedjob.cpp  abstractthreadedjob.h  kr7zencryptionchecker.cpp  kr7zencryptionchecker.h  krarchandler.cpp  krarchandler.h  packjob.cpp  packjob.h
app/BookMan/: CMakeLists.txt  kraddbookmarkdlg.cpp  kraddbookmarkdlg.h  krbookmark.cpp  krbookmark.h  krbookmarkbutton.cpp  krbookmarkbutton.h  krbookmarkhandler.cpp  krbookmarkhandler.h
app/Dialogs/: CMakeLists.txt  checksumdlg.cpp  checksumdlg.h  krdialogs.cpp  krdialogs.h  krmaskchoice.cpp  krmaskchoice.h  krpleasewait.cpp  krpleasewait.h  krspecialwidgets.cpp  krspecialwidgets.h  krspwidgets.cpp  krspwidgets.h  krsqueezedtextlabel.cpp  krsqueezedtextlabel.h  kurllistrequester.cpp  kurllistrequester.h  newftpgui.cpp  newftpgui.h  packgui.cpp  packgui.h  packguibase.cpp  packguibase.h  percentalsplitter.cpp  percentalsplitter.h  popularurls.cpp  popularurls.h
app/DiskUsage/: CMakeLists.txt  diskusage.cpp  diskusage.h  diskusagegui.cpp  diskusagegui.h  dufilelight.cpp  dufilelight.h  dulines.cpp  dulines.h  dulistview.cpp  dulistview.h
app/FileSystem/: CMakeLists.txt  defaultfilesystem.cpp  defaultfilesystem.h  dirlisterinterface.h  fileitem.cpp  fileitem.h  filesystem.cpp  filesystem.h  filesystemprovider.cpp  filesystemprovider.h  krpermhandler.cpp  krpermhandler.h  krquery.cpp  krquery.h  krtrashhandler.cpp  krtrashhandler.h  sizecalculator.cpp  sizecalculator.h  virtualfilesystem.cpp  virtualfilesystem.h
app/Filter/: CMakeLists.txt  advancedfilter.cpp  advancedfilter.h  filterbase.h  filterdialog.cpp  filterdialog.h  filtersettings.cpp  filtersettings.h  filtertabs.cpp  filtertabs.h  generalfilter.cpp  generalfilter.h
app/GUI/: CMakeLists.txt  dirhistorybutton.cpp  dirhistorybutton.h  kcmdline.cpp  kcmdline.h  kcmdmodebutton.cpp  kcmdmodebutton.h  kfnkeys.cpp  kfnkeys.h  krhistorycombobox.cpp  krhistorycombobox.h  krlistwidget.cpp  krlistwidget.h  krremoteencodingmenu.cpp  krremoteencodingmenu.h  krstyleproxy.cpp  krstyleproxy.h  krtreewidget.cpp  krtreewidget.h  krusaderstatus.cpp  krusaderstatus.h  mediabutton.cpp  mediabutton.h  profilemanager.cpp  profilemanager.h  terminaldock.cpp  (+3 more)
doc/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  advanced-functions.docbook  archives.docbook  basic-functions.docbook  bookmarks.docbook  checksum.docbook  compare.docbook  configuration-files.docbook  credits-and-license.docbook  diskusage.docbook  editors-note.docbook  faq.docbook  fdl-license  features.docbook  glossary.docbook  help.docbook  index.docbook  installation.docbook  introduction.docbook  java.docbook  keyboard-commands.docbook  konfigurator.docbook  krusader-tools.docbook  krusader.1  locate.docbook  man-krusader.1.docbook  menu-commands.docbook  mount.docbook  mouse-commands.docbook  occupied-space.docbook  profiles.docbook  release-overview.docbook  remote-connections.docbook  search.docbook  splitter.docbook  synchronizer.docbook  update_docbook  (+7 more)
iso/: CMakeLists.txt  Makefile.am  iso.cpp  iso.h  iso.json  iso.protocol  isoservice.desktop  kiso.cpp  kiso.h  kisodebug.cpp  kisodebug.h  kisodirectory.cpp  kisodirectory.h  kisofile.cpp  kisofile.h  qfilehack.cpp  qfilehack.h
krArc/: CMakeLists.txt  Makefile.am  krarc.cpp  krarc.h  krarc.json  krarc.protocol  krarcbasemanager.cpp  krarcbasemanager.h  krdebuglogger.h  krlinecountingprocess.cpp  krlinecountingprocess.h  krzip.cpp  krzip.h  krzip.protocol
krusader/: CMakeLists.txt  Makefile.am  Makefile.in  abstractpanelmanager.h  actionsbase.cpp  actionsbase.h  alpa-yellow.color  bash.color  calc.js  calc.ui  compat.h  defaults.h  dos_navigator.color  filelisticon.cpp  filelisticon.h  filemanagerwindow.h  hi16-app-krusader_root.xpm  icon.cpp  icon.h  kicons.cpp  kicons.h  kractions.cpp  kractions.h  krdebuglogger.cpp  krdebuglogger.h  krglobal.cpp  krglobal.h  krmainwindow.cpp  krmainwindow.h  krservices.cpp  krservices.h  krslots.cpp  krslots.h  krtrashhandler.cpp  krtrashhandler.h  krusader.appdata.xml  krusader.cpp  krusader.desktop  krusader.h  krusader_root-mode.desktop  (+40 more)
pics/: CMakeLists.txt  Makefile.am  Makefile.in  cr32-app-krusader_root.xpm  hi32-app-krusader_user.xpm
po/: CMakeLists.txt  Makefile.in  bg.po  bs.po  ca.po  cs.po  da.po  de.po  dk.po  el.po  es.po  fr.po  hu.po  it.po  ja.po  jp.po  ko.po  krusader.pot  lt.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sr@Latn.po  sv.po  tr.po  uk.po  zh_CN.po
tar/: CMakeLists.txt  Makefile.am  Makefile.in  ar.protocol  ktartest.cpp  tar.cc  tar.h  tar.protocol  zip.protocol
virt/: CMakeLists.txt  Makefile.am  Makefile.in  virt.cc  virt.h  virt.protocol
(+1505 files in other folders)
