####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = en pics 

EXTRA_DIST = krusader.1 

install-data-local:
	$(mkinstalldirs) /usr/share/man/man1/
	$(INSTALL_DATA) $(srcdir)/krusader.1 /usr/share/man/man1/krusader.1

uninstall-local:
	-rm -f /usr/share/man/man1/krusader.1

####### kdevelop will overwrite this part!!! (end)############

