####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = en pics 

EXTRA_DIST = krusader.1 

install-data-local:
	$(mkinstalldirs) $(mandir)/man1/
	$(INSTALL_DATA) $(srcdir)/krusader.1 $(mandir)/man1/krusader.1

uninstall-local:
	-rm -f $(mandir)/man1/krusader.1

####### kdevelop will overwrite this part!!! (end)############

